<resources>
    <string name="app_name">petition-staff</string>
    <string name="petition_staff_home_name">工作预警</string>
    <string name="petition_staff_object_name">重点对象</string>
    <string name="petition_staff_staff_name">人员信息</string>
    <string name="petition_staff_analyze_name">统计分析</string>
    <string name="petition_staff_person_name">个人中心</string>
    <string name="petition_staff_color_006ba">#0066ba</string>
    <string name="petition_staff_near_letter">临近信访件</string>
    <string name="petition_staff_to_accept">待受理</string>
    <string name="petition_staff_in_hand">待办理</string>
    <string name="petition_staff_to_oversee">待督办</string>
    <string name="petition_staff_overdue_letter">逾期信访件</string>
    <string name="petition_staff_id_card">证件号码</string>
    <string name="petition_staff_int_id_card_number">输入身份证</string>
    <string name="petition_staff_hint_04">请输入密码</string>
    <string name="petition_staff_login">登录</string>
    <string name="petition_staff_sp_info">staffInfo</string> <!--账户信息保存sp表-->
    <string name="petitioin_staff_login_succeed">登陆成功</string>
    <string name="petition_staff_sp_isLogin">isLogin</string>
    <string name="petition_staff_sp_ZP">zp</string>
    <string name="petition_staff_sp_XM">xm</string>
    <string name="petition_staff_sp_XB">xb</string>
    <string name="petition_staff_sp_ZJLX">zjlx</string>
    <string name="petition_staff_sp_ZJHM">zjhm</string>
    <string name="petition_staff_sp_DHHM">dhhm</string>
    <string name="petition_staff_sp_CSRQ">csrq</string>
    <string name="petition_staff_sp_BH">bh</string>
    <string name="petition_staff_sp_XXDZ">xxdz</string>
    <string name="petition_staff_sp_MZ">mz</string>
    <string name="petition_staff_important_object">重点信访人员</string>
    <string name="petition_staff_import_items">重点信访事项</string>
    <string name="petition_staff_conflict_check">矛盾纠纷排查</string>
    <string name="petition_staff_change_person_info">修改个人信息</string>
    <string name="petition_staff_login_out">退出登录</string>
    <string name="petition_staff_change_phone">修改绑定手机</string>
    <string name="petition_staff_change_password">修改密码</string>
    <string name="petition_staff_import_submission">重点监控报送</string>
    <string name="petition_staff_petition_submission">信访详情报送</string>
    <string name="petition_staff_type_id_card">身份证</string>
    <string name="petition_staff_type_passport">有效护照</string>
    <string name="petition_staff_type_hongkong_card">港澳居民来往内地通行证</string>
    <string name="petititon_staff_type_taiwan_card">台湾居民来往内地通行证</string>
    <string name="petition_staff_man">男</string>
    <string name="petition_staff_woman">女</string>
    <string name="petition_staff_sex">性别</string>
    <string name="petition_staff_area">地区</string>
    <string name="petition_staff_staff_info_detail">人员信息详情</string>
    <string name="petition_staff_level">级别</string>
    <string name="petition_staff_type">类型</string>
    <string name="petition_staff_sp_YHM">yhm</string>
    <string name="petition_staff_personal_info">个人信息</string>
    <string name="petition_staff_showtoast_01">很遗憾你把相机权限禁用了。请务必开启相机权限享受我们提供的服务吧。</string>
    <string name="petition_staff_QY_SH">QY_SH</string>
    <string name="petition_staff_QY_SHDM">QY_SHDM</string>
    <string name="petition_staff_QY_S">QY_S</string>
    <string name="petition_staff_QY_SDM">QY_SDM</string>
    <string name="petition_staff_QY_X">QY_X</string>
    <string name="petition_staff_QY_XDM">QY_XDM</string>

    <string name="petition_staff_short_time_sp">shorttimesp</string>
    <string name="petition_staff_nation_choose">民族选择</string>
    <string name="petition_staff_change_bunding_phone">修改绑定手机</string>
    <string name="petition_staff_next">下一步</string>
    <string name="petition_staff_showtoast_error">密码不能为空</string>
    <string name="petition_staff_phone_number">手机号码</string>
    <string name="petition_staff_showtoast_02">请输入手机号码</string>
    <string name="petition_staff_verifycode">验证码</string>
    <string name="petition_staff_showtoast_03">请输入验证码</string>
    <string name="petition_staff_get_verifycode">点击获取</string>
    <string name="petition_staff_verifycode_true">验证码正确</string>
    <string name="petition_staff_password_true">密码正确</string>
    <string name="petition_verifycode_send">验证码发送成功</string>
    <string name="petition_staff_showtoast_04">手机号码修改成功</string>
    <string name="petition_staff_submit">提交</string>
    <string name="petition_staff_old_password">原始密码</string>
    <string name="petition_staff_new_password">新密码</string>
    <string name="petition_staff_reture_new_password">确认新密码</string>
    <string name="petition_staff_showtoast_05">请输入新密码</string>
    <string name="petition_staff_showtoast_06">请确认新密码</string>
    <string name="petition_staff_error_show">密码输入不一致或者密码不能为空</string>
    <string name="petition_staff_showtoast_08">密码修改成功</string>
    <string name="petition_staff_add">增加</string>
    <string name="petition_staff_add1">添加</string>
    <string name="petition_staff_petition_submission_01">信访件形式量</string>
    <string name="petition_staff_petition_submission_02">来访</string>
    <string name="petition_staff_petition_submission_03">来信</string>
    <string name="petition_staff_petition_submission_04">微信</string>
    <string name="petition_staff_petition_submission_05">热线</string>
    <string name="petition_staff_petition_submission_06">信箱</string>
    <string name="petition_staff_petition_submission_07">APP</string>
    <string name="petition_staff_petition_submission_08">本月信访件处理量</string>
    <string name="petition_staff_petition_submission_09">待审核</string>
    <string name="petition_staff_petition_submission_10">信访件工作预警</string>
    <string name="petition_staff_petition_submission_11">临近件</string>
    <string name="petition_staff_petition_submission_12">逾期件</string>
    <string name="petition_staff_area_01">地区</string>
    <string name="petition_staff_upload_successd">上传成功</string>
    <string name="petition_staff_change_succeed">修改成功</string>
    <string name="petition_staff_analyze_01">信访形式占比率</string>
    <string name="petition_staff_analyze_02">及时受理率</string>
    <string name="petition_staff_analyze_03">按期办结率</string>
    <string name="petition_staff_analyze_04">群众参评率</string>
    <string name="petition_staff_analyze_05">信访类型统计</string>
    <string name="petition_staff_analyze_06">处理机关统计</string>
    <string name="petition_staff_check_box_01">按年统计</string>
    <string name="petition_staff_check_box_02">按月统计</string>
    <string name="petition_staff_check_box_03">按季度统计</string>
    <string name="petition_staff_work_warning_01">来访信访件</string>
    <string name="petition_staff_work_warning_02">来信信访件</string>
    <string name="petition_staff_work_warning_03">来电信访件</string>
    <string name="petition_staff_work_warning_04">网信信访件</string>
    <string name="petition_staff_sp_SSBM">SSBM</string>
    <string name="petition_staff_review_petition_letter">查看信访件</string>
    <string name="petition_staff_sp_MZID">MZID</string>
    <string name="petition_staff_zjlx">证件类型</string>
    <string name="petition_staff_sp_ZJLXID">ZJLXID</string>
    <string name="petition_staff_sp_ID">ID</string>
    <string name="version_name">信访工作人员</string>
    <string name="can_not_find_version_name">找不到版本名</string>
    <string name="petition_staff_add_succeed">添加成功</string>
    <string name="petition_staff_di">低</string>
    <string name="petition_staff_zhong">中</string>
    <string name="petition_staff_gao">高</string>
    <string name="petition_staff_add_important_monitor">新增重点监控</string>
    <string name="petition_staff_sp_JYLXY">JYLXY</string>
    <string name="petition_staff_sp_JYLXYDM">JYLXDM</string>
    <string name="petition_staff_JYLXE">JYLXE</string>
    <string name="petition_staff_JYLXEDM">JYLXEDM</string>
    <string name="petition_staff_JYLXS">JYLXS</string>
    <string name="petition_staff_JYLXSDM">JYLXSDM</string>
    <string name="petition_staff_wt_type">问题类型</string>
    <string name="petition_staff_sp_XFMD">XFMD</string>
    <string name="petition_staff_sp_XFMDID">XFMDID</string>
    <string name="petition_staff_XFMD">信访目的</string>
    <string name="petition_staff_sp_1">1</string>
    <string name="petition_staff_sp_2">2</string>
    <string name="petition_staff_sp_3">3</string>
    <string name="petition_staff_sp_4">4</string>
    <string name="petition_staff_sp_5">5</string>
    <string name="petition_staff_sp_6">6</string>
    <string name="petition_staff_sp_7">7</string>
    <string name="petition_staff_sp_8">8</string>
    <string name="petition_staff_sp_9">9</string>
    <string name="petition_staff_sp_10">10</string>
    <string name="petition_staff_sp_11">11</string>
    <string name="petition_staff_sp_12">12</string>
    <string name="petition_staff_sp_13">13</string>
    <string name="petition_staff_sp_14">14</string>
    <string name="petition_staff_sp_15">15</string>
    <string name="petition_staff_sp_16">16</string>
    <string name="petition_staff_sp_17">17</string>
    <string name="petition_staff_sp_18">18</string>
    <string name="petition_staff_sp_19">19</string>
    <string name="petition_staff_sp_20">20</string>

    <string name="petition_staff_doc_docx_name">"最多添加五个附件，每个附件不能超过10M，仅支持doc;docx;gif;jip;jpeg;png;bmp;txt;pdf"</string>
    <string name="petition_staff_file_name">文档</string>
    <string name="petition_staff_picture_name">照片</string>
    <string name="petition_staff_show_error">不支持此种格式的文件,请重新选择</string>
    <string name="petition_staff_error_toast_01">请选择对应类型文件</string>
    <string name="petition_staff_sp_file_id">file_id</string>
    <string name="petition_staff_contact_list_name">联名人列表</string>
    <string name="petition_staff_shareprefers_save_list">contact_people</string>
    <string name="petition_staff_toast_error_02">请完善信息</string>
    <string name="petition_staff_contact_QY_SH">contact_QY_SH</string>
    <string name="petition_staff_contact_QY_SHDM">contact_QY_SHDM</string>
    <string name="petition_staff_contact_QY_S">contact_QY_S</string>
    <string name="petition_staff_contact_QY_SDM">contact_QY_SDM</string>
    <string name="petition_staff_contact_QY_X">contact_QY_X</string>
    <string name="petition_staff_contact_QY_XDM">contact_QY_XDM</string>
    <string name="petition_staff_add_contact_people">添加联名人</string>
    <string name="petition_staff_sp_contact_people">sp_contact_people</string>
    <string name="petition_staff_contact_QY_SH11">QY_SH11</string>
    <string name="petition_staff_contact_QY_SHDM11">QY_SHDM11</string>
    <string name="petition_staff_contact_QY_S11">QY_S11</string>
    <string name="petition_staff_contact_QY_SDM11">QY_SDM11</string>
    <string name="petition_staff_contact_QY_X11">QY_X11</string>
    <string name="petition_staff_contact_QY_XDM11">QY_XDM11</string>
    <string name="petition_staff_add_adjunct">附件列表</string>
    <string name="petitionStaff_no_where">不限</string>
    <string name="petitionStaff_website">网站</string>
</resources>
