<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/aorise_include_toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:focusable="true"
                android:focusableInTouchMode="true">
                <RelativeLayout
                    android:id="@+id/rl_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petition_staff_47dp"
                    android:background="@color/petition_staff_ffffff">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/petition_staff_32dp"
                        android:text="@string/petition_staff_old_password"
                        android:textColor="@color/petition_staff_565656" />

                    <EditText
                        android:id="@+id/edt_old_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/textView5"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="@dimen/petition_staff_53dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:layout_toLeftOf="@+id/imageView1"
                        android:layout_toRightOf="@+id/textView3"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/petition_staff_hint_04"
                        android:inputType="textPassword"
                        android:textColor="@color/petition_staff_0461bc"
                        android:textColorHint="@color/petition_staff_aeaeae"
                        android:textSize="@dimen/petition_staff_10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/petition_staff_1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="@dimen/petition_staff_10dp"
                        android:background="@color/petition_staff_aeaeae" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petition_staff_47dp"
                    android:background="@color/petition_staff_ffffff">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/petition_staff_32dp"
                        android:text="@string/petition_staff_new_password"
                        android:textColor="@color/petition_staff_565656" />

                    <EditText
                        android:id="@+id/edt_new_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/textView5"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="@dimen/petition_staff_53dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:layout_toLeftOf="@+id/imageView1"
                        android:layout_toRightOf="@+id/textView3"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/petition_staff_showtoast_05"
                        android:inputType="textPassword"
                        android:textColor="@color/petition_staff_0461bc"
                        android:textColorHint="@color/petition_staff_aeaeae"
                        android:textSize="@dimen/petition_staff_10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/petition_staff_1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="@dimen/petition_staff_10dp"
                        android:background="@color/petition_staff_aeaeae" />
                </RelativeLayout>
                <RelativeLayout
                    android:id="@+id/rl_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petition_staff_47dp"
                    android:background="@color/petition_staff_ffffff">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/petition_staff_32dp"
                        android:text="@string/petition_staff_reture_new_password"
                        android:textColor="@color/petition_staff_565656" />

                    <EditText
                        android:id="@+id/edt_resure_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_above="@+id/textView5"
                        android:layout_alignParentTop="true"
                        android:layout_marginRight="@dimen/petition_staff_53dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:layout_toLeftOf="@+id/imageView1"
                        android:layout_toRightOf="@+id/textView3"
                        android:background="@null"
                        android:gravity="right|center_vertical"
                        android:hint="@string/petition_staff_showtoast_06"
                        android:inputType="textPassword"
                        android:textColor="@color/petition_staff_0461bc"
                        android:textColorHint="@color/petition_staff_aeaeae"
                        android:textSize="@dimen/petition_staff_10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/petition_staff_1dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginLeft="@dimen/petition_staff_10dp"
                        android:background="@color/petition_staff_aeaeae" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_submit"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/petition_staff_44dp"
                    android:layout_marginBottom="@dimen/petition_staff_138dp"
                    android:layout_marginLeft="@dimen/petition_staff_10dp"
                    android:layout_marginRight="@dimen/petition_staff_10dp"
                    android:layout_marginTop="@dimen/petition_staff_57dp"
                    android:background="@color/petition_staff_0461bc">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/petition_staff_submit"
                        android:textColor="@color/petition_staff_ffffff"
                        android:textSize="@dimen/petition_staff_14dp" />
                </RelativeLayout>
            </LinearLayout>
        </ScrollView>

    </LinearLayout>
</layout>
